# tiki-taka-feed-server

./: DockerFile  alembic.ini  docker-compose.yml  pyproject.toml  train.csv  train_model.py
app/: dependencies.py  main.py  text_classification_model.pkl
app/api/v1/: api.py
app/api/v1/endpoints/: classify.py  items.py
app/core/: config.py
app/db/: base.py  session.py
app/utils/: fetch_rss_feeds.py  rebuild_front_end.py  refresh_rss_feeds.py
